<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <artifactId>runtime</artifactId>
    <groupId>org.assimbly</groupId>
    <version>3.8.0</version>
  </parent>

  <name>dil</name>
  <packaging>jar</packaging>

  <groupId>org.assimbly</groupId>
  <artifactId>dil</artifactId>
  <version>3.8.0</version>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.release>11</maven.compiler.release>
    <maven-versions-rules>file:///${project.parent.basedir}/rules.xml</maven-versions-rules>
  </properties>

  <dependencies>
	  <dependency>
			<groupId>org.assimbly</groupId>
			<artifactId>camelBase</artifactId>
			<version>${assimbly.version}</version>
	  </dependency>
	  <dependency>
		  <groupId>org.assimbly</groupId>
		  <artifactId>extra</artifactId>
 		  <version>${assimbly.version}</version>
	  </dependency>
    	<dependency>
			<groupId>org.assimbly</groupId>
			<artifactId>testBase</artifactId>
			<version>${assimbly.version}</version>
			<scope>test</scope>
		</dependency>
	  <dependency>
		  <groupId>org.assimbly</groupId>
		  <artifactId>utils</artifactId>
		  <version>${assimbly.version}</version>
	  </dependency>
  </dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-toolchains-plugin</artifactId>
				<executions>
					<execution>
						<goals>
							<goal>toolchain</goal>
						</goals>
						<configuration>
							<toolchains>
								<jdk>
									<version>11</version>
								</jdk>
							</toolchains>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

</project>